fix: remove extra scrollbar

--- a/shell/src/style.css
+++ b/shell/src/style.css
@@ -48,5 +48,5 @@ iframe {
 }
 
 .mf-shell-target {
-  height: 100%;
+  height: calc(100% - 64px);
 }
